lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class AuroraBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AuroraBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AuroraBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int tw_settings_init() {
    return _tw_settings_init();
  }

  late final _tw_settings_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_settings_init');
  late final _tw_settings_init =
      _tw_settings_initPtr.asFunction<int Function()>();

  int tw_settings_get(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_settings_get(
      key,
      out_value,
      out_len,
    );
  }

  late final _tw_settings_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('tw_settings_get');
  late final _tw_settings_get = _tw_settings_getPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  int tw_settings_get_all(
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_settings_get_all(
      out_value,
      out_len,
    );
  }

  late final _tw_settings_get_allPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Size)>>(
      'tw_settings_get_all');
  late final _tw_settings_get_all = _tw_settings_get_allPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_settings_set(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _tw_settings_set(
      key,
      value,
    );
  }

  late final _tw_settings_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('tw_settings_set');
  late final _tw_settings_set = _tw_settings_setPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int tw_settings_flush() {
    return _tw_settings_flush();
  }

  late final _tw_settings_flushPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_settings_flush');
  late final _tw_settings_flush =
      _tw_settings_flushPtr.asFunction<int Function()>();

  int tw_settings_reset_defaults() {
    return _tw_settings_reset_defaults();
  }

  late final _tw_settings_reset_defaultsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_settings_reset_defaults');
  late final _tw_settings_reset_defaults =
      _tw_settings_reset_defaultsPtr.asFunction<int Function()>();

  int tw_settings_subscribe(
    tw_settings_event_cb callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _tw_settings_subscribe(
      callback,
      user_data,
    );
  }

  late final _tw_settings_subscribePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(tw_settings_event_cb,
              ffi.Pointer<ffi.Void>)>>('tw_settings_subscribe');
  late final _tw_settings_subscribe = _tw_settings_subscribePtr
      .asFunction<int Function(tw_settings_event_cb, ffi.Pointer<ffi.Void>)>();

  int tw_power_get_battery_info(
    ffi.Pointer<tw_battery_info_t> out_info,
  ) {
    return _tw_power_get_battery_info(
      out_info,
    );
  }

  late final _tw_power_get_battery_infoPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<tw_battery_info_t>)>>(
      'tw_power_get_battery_info');
  late final _tw_power_get_battery_info = _tw_power_get_battery_infoPtr
      .asFunction<int Function(ffi.Pointer<tw_battery_info_t>)>();

  int tw_power_get_battery_string(
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_power_get_battery_string(
      out_value,
      out_len,
    );
  }

  late final _tw_power_get_battery_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Size)>>(
      'tw_power_get_battery_string');
  late final _tw_power_get_battery_string = _tw_power_get_battery_stringPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_display_set_brightness_percent(
    int percent,
  ) {
    return _tw_display_set_brightness_percent(
      percent,
    );
  }

  late final _tw_display_set_brightness_percentPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int32)>>(
          'tw_display_set_brightness_percent');
  late final _tw_display_set_brightness_percent =
      _tw_display_set_brightness_percentPtr.asFunction<int Function(int)>();

  int tw_display_get_brightness_percent(
    ffi.Pointer<ffi.Int32> out_percent,
  ) {
    return _tw_display_get_brightness_percent(
      out_percent,
    );
  }

  late final _tw_display_get_brightness_percentPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Int32>)>>(
          'tw_display_get_brightness_percent');
  late final _tw_display_get_brightness_percent =
      _tw_display_get_brightness_percentPtr
          .asFunction<int Function(ffi.Pointer<ffi.Int32>)>();

  int tw_display_percent_to_brightness_value(
    int percent,
    ffi.Pointer<ffi.Int32> out_value,
  ) {
    return _tw_display_percent_to_brightness_value(
      percent,
      out_value,
    );
  }

  late final _tw_display_percent_to_brightness_valuePtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int32, ffi.Pointer<ffi.Int32>)>>(
      'tw_display_percent_to_brightness_value');
  late final _tw_display_percent_to_brightness_value =
      _tw_display_percent_to_brightness_valuePtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Int32>)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>
      __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

typedef tw_settings_event_cb
    = ffi.Pointer<ffi.NativeFunction<tw_settings_event_cbFunction>>;
typedef tw_settings_event_cbFunction = ffi.Void Function(
    ffi.Int event_type,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<ffi.Void> user_data);
typedef Darttw_settings_event_cbFunction = void Function(
    int event_type,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<ffi.Void> user_data);

final class tw_battery_info extends ffi.Struct {
  @ffi.Int32()
  external int capacity;

  @ffi.Int32()
  external int charging;
}

typedef tw_battery_info_t = tw_battery_info;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __has_bounds_safety_attributes = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __WORDSIZE = 64;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;
